# Scavenger-Hunt

./: .gitignore  CMakeLists.txt  Design  README.md  main.cpp
Design/: diagram.puml
MyGameQtShare/: MyGame.pro
MyGameQtShare/include/: gamewindow.h  player.h
MyGameQtShare/src/: gamewindow.cpp  main.cpp  player.cpp
MyGameShare/: main.cpp  player.cpp  player.h
core/include/: Game.h
core/src/: Entity.cpp  Game.cpp  GameObject.cpp  Map.cpp
gameplay/include/: Player.h
gameplay/src/: Enemy.cpp  Obstacle.cpp  Player.cpp  PowerUp.cpp  Target.cpp
systems/src/: DifficultyManager.cpp  GameStateManager.cpp  ScoreManager.cpp
tests/: test_game.cpp
ui/: GameOver.h  GameOver.ui  GameScreen.h  GameScreen.ui  GameWindow.cpp  GameWindow.h  GameWindow.ui  MainMenu.cpp  MainMenu.h  MainMenu.ui
utils/: Enums.h
